# fluxa-core

./: .gitignore  Cargo.toml  README.md  uniffi.toml
.github/workflows/: ci.yml
benches/: headless_engine_dispatch.rs  stream_ranking.rs
docs/: building.md  robustness-plan.md
fluxa-streaming-engine/: .env.example  Cargo.toml
fluxa-streaming-engine/src/: chapters.rs  companion_server.rs  dv_rewrite.rs  ffmpeg_locator.rs  lib.rs  local_stream.rs  oauth_proxy.rs  torrent_engine.rs  transcode.rs  youtube_trailer.rs
fluxa-streaming-engine/src/bindings/: apple.rs  jni.rs  mod.rs
fluxa-streaming-engine/src/dv_rewrite/: dvcc.rs  hls_urls.rs  mkv.rs  stats.rs
fluxa-streaming-engine/src/torrent_engine/: http.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: engine_dispatch.rs
scripts/: build-ios-xcframework.sh
src/: action_contract.rs  addon_protocol.rs  addon_resource.rs  addon_store.rs  addon_uptime.rs  anime_detection.rs  app_state.rs  calendar_plan.rs  cast_protocol.rs  content_identity.rs  core_api.rs  core_error.rs  desktop_playback.rs  dolby_vision_rpu.rs  external_sync.rs  ffi.rs  headless_adapter_plan.rs  home_ranking.rs  intro_segments.rs  lib.rs  library_persistence.rs  library_state.rs  log_sink.rs  nuvio_sync.rs  oauth_plan.rs  offline_download.rs  platform_plan.rs  player_flow.rs  player_policy.rs  player_scrobble.rs  plugins.rs  profile_avatar_pack.rs  profile_contract.rs  profile_prefs.rs  repository_flow.rs  search_plan.rs  stream_policy.rs  subtitle_sync.rs  tmdb_plan.rs  trailer_subtitles.rs  (+1 more)
src/bindings/: jni.rs  mod.rs  uniffi.rs  wasm.rs
src/external_sync/: anilist.rs  provider_mappers.rs
src/ffi/: addon_resource_routes.rs  addon_support_routes.rs  engine_routes.rs  external_sync_routes.rs  library_routes.rs
src/headless_engine/: addons.rs  auth.rs  calendar.rs  contracts.rs  detail.rs  discover.rs  helpers.rs  home.rs  library.rs  mod.rs  navigation.rs  offline.rs  player.rs  plugins.rs  profile.rs  search.rs  settings.rs  state.rs  sync.rs  trailer.rs
src/player_policy/: dolby_vision.rs
src/plugin_runtime/: crypto_bridge.rs  dom_bridge.rs  mod.rs
src/runtime/: effects.rs
src/types/: mod.rs  plugin.rs  profile.rs
src/types/resource/: mod.rs
src/watchlist_plan/: collections.rs
tests/fixtures/external_sync/: simkl_mark_watched_expected.json  simkl_mark_watched_input.json  simkl_watched_expected.json  simkl_watched_response.json  trakt_playback_expected.json  trakt_playback_response.json  trakt_scrobble_plan_expected.json  trakt_scrobble_plan_input.json
tests/wire/: core_invoke_methods.txt
tests/wire/actions/: detail_load_requested.json  navigation_requested.json  profile_activated.json  scrobble_requested.json  settings_changed.json  toggle_watchlist_requested.json
tests/wire/expected/: detail_load_requested.json  navigation_requested.json  profile_activated.json  scrobble_requested.json  settings_changed.json  toggle_watchlist_requested.json
