[workspace]
members = ["fluxa-streaming-engine"]
exclude = ["fuzz"]
resolver = "2"

[workspace.dependencies]
dolby_vision = { version = "3.3.2", default-features = false }
fluxa_core = { path = ".", default-features = false }
jni = { version = "0.21" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "unwind"

[package]
name = "fluxa_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[features]
default = ["native"]
native = [
    "full-api",
    "dep:jni",
    "dep:dolby_vision",
    "uniffi-bindings",
]
desktop = ["full-api"]
full-api = []
streaming-shared = []
uniffi-bindings = ["dep:uniffi", "full-api"]
uniffi-cli = ["uniffi-bindings", "uniffi/cli"]
wasm = ["full-api", "dep:wasm-bindgen", "chrono/wasmbind"]
fuzzing = []

[dependencies]
base64 = "0.22"
chrono = { version = "0.4.45", features = ["serde"] }
dolby_vision = { workspace = true, optional = true }
jni = { workspace = true, optional = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
uniffi = { version = "0.31.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-time = "1"
