[package]
name = "fluxa_streaming_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:axum",
    "dep:fluxa_core",
    "dep:jni",
    "dep:librqbit",
    "dep:reqwest",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tower-http",
    "dep:url",
]

[dependencies]
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
dolby_vision = { workspace = true }
fluxa_core = { workspace = true, features = ["streaming-shared"], optional = true }
jni = { workspace = true, optional = true }
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls", "disable-upload"], optional = true }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "form", "rustls"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "process", "fs", "macros"], optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
url = { version = "2", optional = true }
